client/deploy/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: react-app
spec:
  to:
    kind: Service
    name: react-app
  port:
    targetPort: 80
  tls:
    termination: edge
